--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "npm": "^8.19.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1"
+    "react-dom": "^17.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,6 +36,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "mocha": "^8.2.1"
+    "mocha": "^10.0.0",
+    "react-scripts": "^5.0.1"
   }
 }
